--- a/polybar/config.ini.template
+++ b/polybar/config.ini.template
@@ -109,6 +109,7 @@ type = internal/xworkspaces
 label-active = %name%%icon%
 label-active-background = ${colors.mauve}
 label-active-foreground = ${colors.crust}
+label-active-underline= ${colors.lauve}
 label-active-padding = 1
 
 icon-0 = 9;:Spotify
@@ -189,7 +190,8 @@ type = internal/battery
 #format-prefix = "BAT "
 #format-prefix-foreground = ${colors.primary}
 full-at = 100
-format-charging = %{T1}⚡<animation-charging>%{T-} <label-charging>
+label-charging=%percentage%(%time%)
+format-charging = ⚡<animation-charging> <label-charging>
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
@@ -198,6 +200,7 @@ animation-charging-4 = 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 animation-charging-foreground = ${colors.peach}
+label-discharging=%percentage%(%time%)
 format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -251,7 +254,6 @@ label-foreground = ${colors.primary}
 [module/github]
 type = internal/github
 token = GITHUB_ACCESS_TOKEN
-;paste your github personal access token above
 interval = 10
 user = vsreddyh
 empty-notifications = true
