--- a/i3/config
+++ b/i3/config
@@ -147,7 +147,7 @@ set $ws10 "10"
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
+bindsym $mod+3 exec --no-startup-id ~/.config/i3/workspace3.sh #Thunderbird
 bindsym $mod+4 exec --no-startup-id ~/.config/i3/workspace4.sh #Games
 bindsym $mod+5 exec --no-startup-id ~/.config/i3/workspace5.sh #zen
 bindsym $mod+6 exec --no-startup-id ~/.config/i3/workspace6.sh #zen obsidian
