--- a/i3/config
+++ b/i3/config
@@ -154,9 +154,9 @@ bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 exec --no-startup-id ~/.config/i3/workspace3.sh #Thunderbird
 bindsym $mod+4 exec --no-startup-id ~/.config/i3/workspace4.sh #Games
 bindsym $mod+5 exec --no-startup-id ~/.config/i3/workspace5.sh #zen
-bindsym $mod+6 exec --no-startup-id ~/.config/i3/workspace6.sh #zen obsidian
-bindsym $mod+7 exec --no-startup-id ~/.config/i3/workspace7.sh #wez zen
-bindsym $mod+8 exec --no-startup-id ~/.config/i3/workspace8.sh #web dev
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 exec --no-startup-id ~/.config/i3/workspace9.sh #spotify
 bindsym $mod+0 workspace number $ws10
 
